update 50% off get products
